--- a/coding/scss/app.scss
+++ b/coding/scss/app.scss
@@ -22,3 +22,5 @@
 @import './components/product';
 @import './components/product-view';
 @import './components/gift';
+@import './components/faq';
+@import './components/shop';
