--- a/coding/pug/components/header.pug
+++ b/coding/pug/components/header.pug
@@ -4,7 +4,7 @@ header.header
       a(href="#") Get Started 
   .header__mobile
     .header__mobile-wrapper
-      button(class="js-nav-toggle header__mobile-btn")
+      button.js-nav-toggle.header__mobile-btn
       .header__mobile-nav
         .header__mobile-nav-wrapper
           ul.header__mobile-nav-list
@@ -15,9 +15,9 @@ header.header
             li.header__mobile-nav-item
               a(href="#") Past Boxes
             li.header__mobile-nav-item
-              a(href="#") Shop
+              a(href="shop.html") Shop
             li.header__mobile-nav-item.uppercase
-              a(href="#") Faq
+              a(href="faq.html") FAQ
             li.header__mobile-nav-item
               i.icon-user
               a(href="login.html") Login
@@ -31,8 +31,11 @@ header.header
               button.button.button--secondary.w-full Get Started
       a(href="mypage.html")
         img.header__mobile-logo(src="../images/logo.png", alt="Treats logo")
-      a(href="#")
-        img.header__mobile-user(src="../images/user.png", alt="User profile") 
+      button.js-user-toggle
+        img.header__mobile-user(src="../images/user.png", alt="User profile")
+      ul.header__nav-list
+        li.header__nav-item
+          a.header__nav-link(href="#") Logout 
   .header__desktop
     .main-wrapper
       .header__desktop-wrapper
@@ -46,7 +49,9 @@ header.header
               li.nav__item
                 a(href="#") Past Boxes
               li.nav__item
-                a(href="#") FAQ
+                a(href="shop.html") Shop
+              li.nav__item
+                a(href="faq.html") FAQ
         .header__inside
             .header__inside
               a(href="gift.html")
