--- a/coding/scss/components/header.scss
+++ b/coding/scss/components/header.scss
@@ -12,7 +12,15 @@
 
 /* Header mobile */
 .header__mobile {
-  @apply bg-white relative border-b border-border-line border-solid px-3 py-[14px] sp:px-6 z-10 big:hidden;
+  @apply bg-white relative border-b border-border-line border-solid px-3 py-[14px] sp:px-6 z-10 big:hidden relative;
+}
+
+.header__nav-list {
+  @apply hidden absolute bg-white rounded-[10px] right-5 bottom-[-50px];
+}
+
+.header__nav-item {
+  @apply p-[10px] min-w-[100px];
 }
 
 .header__mobile-btn {
