--- a/coding/pug/components/footer.pug
+++ b/coding/pug/components/footer.pug
@@ -24,7 +24,7 @@ footer.footer
             li.footer__items
               a(href="#") Privacy 
             li.footer__items
-              a(href="#") Contact 
+              a(href="contact-us.html") Contact 
             li.footer__items
               a(href="#") Sponsorship 
             li.footer__items
