--- a/coding/pug/faq.pug
+++ b/coding/pug/faq.pug
@@ -20,12 +20,14 @@ block content
           button.faq__cta(type="button") Search
         .faq__wrapper
           #faq__box--treats
-            .faq__header
+            .faq__header#js-hide
               h3 Treats Box
             ul#js-faq__list
           #faq__box--order
-            .faq__header
+            .faq__header#js-hide
               h3 Orders
+            ul#js-faq__orders
           #faq__box--shipping
-            .faq__header
+            .faq__header#js-hide
               h3 Shipping
+            ul#js-faq__shipping
