--- a/coding/pug/product.pug
+++ b/coding/pug/product.pug
@@ -107,3 +107,128 @@ block content
                 .product__header
                   h3 Dried Mango
                   p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+          li.product__item
+            a.product__link(href="#")
+              .product__card
+                p.product__highlight Philippines
+                img(src="../images/products/driedMango.png", alt="Dried mango")
+                .product__header
+                  h3 Dried Mango
+                  p Philippines Brand
+        .product__show-more
+          span#next Show More
+
+block script
+  script(src="../js/showmore.js")
