--- a/coding/css/input.css
+++ b/coding/css/input.css
@@ -78,7 +78,9 @@ footer {
 .product-view,
 .gift,
 .faq,
-.shop {
+.shop,
+.box-card,
+.music {
   @apply px-3 sp:px-6;
 }
 
@@ -1145,6 +1147,12 @@ footer {
 .product__header p {
   @apply font-text text-xl text-text-dark-60;
 }
+.product__show-more {
+  @apply mt-[26px] tablet:mt-[96px] text-center;
+}
+.product__show-more #next {
+  @apply underline text-base text-text-dark font-medium font-text cursor-pointer;
+}
 
 .product-view__wrapper {
   @apply pt-[30px] pb-[39px] tablet:grid tablet:grid-cols-2 tablet:gap-x-[31px] tablet:pt-[60px] tablet:pb-[100px];
@@ -1246,6 +1254,12 @@ footer {
 .gift__header p {
   @apply font-text font-semibold text-base text-text-dark tablet:text-lg;
 }
+.gift__header--pc {
+  @apply hidden text-center mb-2 tablet:block;
+}
+.gift__header--sp {
+  @apply tablet:hidden;
+}
 .gift__row {
   @apply flex mb-[15px] items-center;
 }
@@ -1257,6 +1271,18 @@ footer {
 }
 .gift__row p {
   @apply font-text font-medium text-[13px] text-text-dark leading-none;
+}
+.gift__item-list--subscribe {
+  @apply tablet:grid tablet:grid-cols-2 tablet:gap-x-5;
+}
+.gift__item-list--subscribe .gift__item {
+  @apply tablet:mb-0;
+}
+.gift__item-list--subscribe .gift__img img {
+  @apply tablet:left-0;
+}
+.gift__item-list--subscribe .gift__item-wrapper {
+  @apply tablet:block;
 }
 
 .faq {
@@ -1389,6 +1415,105 @@ footer {
 }
 .shop__price {
   @apply text-[26px] text-primary;
+}
+
+.box-card {
+  @apply pt-[40px] pb-[50px] tablet:pt-[60px] tablet:pb-[100px] bg-white;
+}
+.box-card__item {
+  @apply bg-product-bg rounded-[15px] p-5 tablet:p-[30px];
+}
+.box-card__header h2 {
+  @apply font-header font-medium text-3xl text-light-blue mb-[22px] text-center;
+}
+.box-card__header p {
+  @apply font-text font-normal text-lg mb-[30px] text-center tablet:max-w-[546px] tablet:mx-auto;
+  color: rgba(45, 67, 87, 0.66);
+}
+.box-card__wrapper {
+  @apply tablet:flex gap-x-3 mb-5;
+}
+.box-card__inside {
+  @apply w-full mb-5 tablet:mb-0;
+}
+.box-card__inside input,
+.box-card__inside textarea,
+.box-card__inside select {
+  @apply rounded-[10px] bg-white px-5 py-4 w-full;
+  border-color: rgba(0, 0, 0, 0.1);
+}
+.box-card__inside input:focus-visible,
+.box-card__inside textarea:focus-visible,
+.box-card__inside select:focus-visible {
+  @apply outline-none;
+}
+.box-card__inside label {
+  @apply block font-text text-sm font-medium text-light-blue mb-3 text-left capitalize;
+}
+
+.music {
+  @apply tablet:pt-[60px] tablet:pb-[100px];
+}
+.music__wrapper {
+  @apply flex;
+}
+.music__current {
+  @apply tablet:w-[783px] tablet:mr-4;
+}
+.music__current iframe {
+  @apply tablet:w-full tablet:h-[440px] rounded-[10px];
+}
+.music__description {
+  @apply tablet:mt-6 tablet:mb-11;
+}
+.music__description-wrapper {
+  @apply flex;
+}
+.music__description-inside {
+  @apply flex items-center;
+}
+.music__description-inside:first-of-type {
+  @apply mr-5;
+}
+.music__description-inside span {
+  @apply font-medium;
+}
+.music__description h4 {
+  @apply font-header font-medium tablet:text-3xl text-text-dark tablet:mb-[13px];
+}
+.music__side {
+  @apply tablet:w-[371px];
+}
+.music__side-item {
+  @apply tablet:mb-4;
+}
+.music__side-item iframe {
+  @apply w-full tablet:h-[208px] rounded-[10px] mb-[6px];
+}
+.music__side-item h5 {
+  @apply font-header font-medium text-base text-text-dark;
+}
+.music__icon {
+  @apply block mr-[10px];
+}
+.music__icon--calendar {
+  @apply bg-[url("../images/icon-calendar-black.png")] w-[14px] h-[14px] bg-no-repeat;
+}
+.music__icon--clock {
+  @apply bg-[url("../images/icon-clock.png")] w-[13px] h-[13px] bg-no-repeat;
+}
+.music__lyrics {
+  @apply font-medium text-base;
+  color: rgba(0, 0, 0, 0.66);
+}
+.music__lyrics h4 {
+  @apply font-header font-medium text-xl mb-[20px] text-text-dark;
+}
+
+#js-faq__list,
+#js-faq__orders,
+#js-faq__shipping {
+  @apply mb-5;
 }
 
 /*# sourceMappingURL=input.css.map */
