--- a/coding/html/components/footer.html
+++ b/coding/html/components/footer.html
@@ -23,7 +23,7 @@
             <li class="footer__items"><a href="#">FAQ </a></li>
             <li class="footer__items"><a href="#">Terms </a></li>
             <li class="footer__items"><a href="#">Privacy </a></li>
-            <li class="footer__items"><a href="#">Contact </a></li>
+            <li class="footer__items"><a href="contact-us.html">Contact </a></li>
             <li class="footer__items"><a href="#">Sponsorship </a></li>
             <li class="footer__items"><a href="#">Music</a></li>
           </ul>
