--- a/coding/pug/layout.pug
+++ b/coding/pug/layout.pug
@@ -24,6 +24,8 @@ html(lang="en")
   block script
   script(src="../js/index.js")
   script(src="../js/carousel-list.js")
-  script(src="../js/carousel.js")
   script(src="../js/css3-animate-it.js")
   script(src="../js/accordion.js")
+  script(src="../js/carousel.js")
+  script(src="../js/smtp.js")
+  script(src="../js/email.js")
