--- a/coding/scss/components/product.scss
+++ b/coding/scss/components/product.scss
@@ -34,4 +34,12 @@
       @apply font-text text-xl text-text-dark-60;
     }
   }
+
+  &__show-more {
+    @apply mt-[26px] tablet:mt-[96px] text-center;
+
+    & #next {
+      @apply underline text-base text-text-dark font-medium font-text cursor-pointer;
+    }
+  }
 }
