--- a/html/components/footer.html
+++ b/html/components/footer.html
@@ -18,7 +18,7 @@
     </div>
     <div class="footer__socials">
       <div class="footer__social-wrapper">
-        <div class="tablet:flex"><a href="#"><img class="footer__mobile-logo" src="../images/logo-white.png" alt="Treats Logo"/></a>
+        <div class="tablet:flex"><a href="#"><img class="footer__mobile-logo" src="../images/Logo-white.png" alt="Treats Logo"/></a>
           <ul class="footer__links">
             <li class="footer__items"><a href="#">FAQ </a></li>
             <li class="footer__items"><a href="#">Terms </a></li>
